
file(GLOB FLXWINXML ${CMAKE_CURRENT_SOURCE_DIR}/*.fcl)
install(FILES ${FLXWINXML} DESTINATION ${CMAKE_INSTALL_PREFIX}/fcl/PRISM)

file(GLOB ExampleFCL ${CMAKE_CURRENT_SOURCE_DIR}/example/*.fcl)
install(FILES ${ExampleFCL} DESTINATION ${CMAKE_INSTALL_PREFIX}/fcl/PRISM/example)

file(GLOB Dmsq32ScanFCL ${CMAKE_CURRENT_SOURCE_DIR}/Dmsq32_1DScan/*.fcl)
install(FILES ${Dmsq32ScanFCL} DESTINATION ${CMAKE_INSTALL_PREFIX}/fcl/PRISM/Dmsq32_1DScan)

file(GLOB Ssth23ScanFCL ${CMAKE_CURRENT_SOURCE_DIR}/Ssth23_1DScan/*.fcl)
install(FILES ${Ssth23ScanFCL} DESTINATION ${CMAKE_INSTALL_PREFIX}/fcl/PRISM/Ssth23_1DScan)

file(GLOB Dmsq32Ssth23ScanFCL ${CMAKE_CURRENT_SOURCE_DIR}/Dmsq32_Ssth23_2DScan/*.fcl)
install(FILES ${Dmsq32Ssth23ScanFCL} DESTINATION ${CMAKE_INSTALL_PREFIX}/fcl/PRISM/Dmsq32_Ssth23_2DScan)

file(GLOB Dmsq32Ssth23ScanSingleFitFCL ${CMAKE_CURRENT_SOURCE_DIR}/Dmsq32_Ssth23_2DScan_SingleFit/*.fcl)
install(FILES ${Dmsq32Ssth23ScanSingleFitFCL} DESTINATION ${CMAKE_INSTALL_PREFIX}/fcl/PRISM/Dmsq32_Ssth23_2DScan_SingleFit)

file(GLOB NuisanceSystScanFCL ${CMAKE_CURRENT_SOURCE_DIR}/NuisanceSyst_Scan/*.fcl)
install(FILES ${NuisanceSystScanFCL} DESTINATION ${CMAKE_INSTALL_PREFIX}/fcl/PRISM/NuisanceSyst_Scan)
